<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/navigation_order"
        android:enabled="true"
        android:title="@string/menu_order"
        android:icon="@drawable/ic_local_bar_white_24dp"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/navigation_tab"
        android:enabled="true"
        android:title="@string/menu_tab"
        android:icon="@drawable/ic_receipt_white_24dp"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/navigation_discover"
        android:enabled="true"
        android:title="@string/menu_discover"
        android:icon="@drawable/ic_location_searching_white_24dp"
        app:showAsAction="ifRoom" />
</menu>