<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:text="Welcome to The Better Bar Tab!"
        android:textSize="25sp"
        android:textColor="@android:color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/order_icon"
                android:layout_alignParentLeft="true"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_local_bar_black_24dp"/>
            <TextView
                android:paddingLeft="10dp"
                android:paddingBottom="10dp"
                android:layout_toRightOf="@id/order_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_tutorial"
                android:textSize="20dp"
                android:textColor="@android:color/black"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/tab_icon"
                android:layout_alignParentLeft="true"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_receipt_black_24dp"/>
            <TextView
                android:paddingLeft="10dp"
                android:paddingBottom="10dp"
                android:layout_toRightOf="@id/tab_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tab_tutorial"
                android:textSize="20dp"
                android:textColor="@android:color/black"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/discover_icon"
                android:layout_alignParentLeft="true"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_location_searching_black_24dp"/>
            <TextView
                android:paddingLeft="10dp"
                android:paddingBottom="10dp"
                android:layout_toRightOf="@id/discover_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/discover_tutorial"
                android:textSize="20dp"
                android:textColor="@android:color/black"/>
        </RelativeLayout>

        <Button
            style="@style/ButtonStyleRounded"
            android:id="@+id/proceed"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/opensans_reg"
            android:layout_gravity="center_horizontal"
            android:text="Start using TBBT!"
            android:textSize="21sp"/>

    </LinearLayout>

</LinearLayout>