<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Discover.BarPreviewFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <ScrollView
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/bottom_navigation">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp">

                    <ImageView
                        android:id="@+id/logo"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/bar_logo_legends" />
                    <LinearLayout
                        android:layout_alignParentLeft="true"
                        android:layout_toStartOf="@id/logo"
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="fill_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="fill_parent"
                                android:layout_weight="1"
                                android:text="Hours:"
                                android:textSize="25sp"
                                android:fontFamily="@font/opensans_reg"
                                android:textColor="@android:color/black"
                                android:layout_marginLeft="5dp"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="fill_parent"
                                android:layout_weight="1"
                                android:fontFamily="@font/opensans_reg"
                                android:text="@string/legends_hours"
                                android:textSize="21sp"
                                android:textColor="@android:color/black"
                                android:layout_marginLeft="5dp"/>
                        </LinearLayout>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="fill_parent"
                            android:gravity="center_vertical"
                            android:layout_weight="1"
                            android:text="@string/legends_addr"
                            android:fontFamily="@font/opensans_reg"
                            android:textSize="25sp"
                            android:textColor="@android:color/black"
                            android:layout_marginLeft="5dp"/>

                    </LinearLayout>
                </RelativeLayout>
                <LinearLayout
                    android:paddingStart="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:fontFamily="@font/opensans_reg"
                            android:src="@drawable/checkbox_filled"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Pool"
                            android:textSize="20sp"
                            android:fontFamily="@font/opensans_reg"
                            android:textColor="@android:color/black"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/checkbox_empty"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:fontFamily="@font/opensans_reg"
                            android:layout_height="wrap_content"
                            android:text="Juke Box"
                            android:textSize="20sp"
                            android:textColor="@android:color/black"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/checkbox_filled"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/opensans_reg"
                            android:text="Sports Viewing"
                            android:textSize="20sp"
                            android:textColor="@android:color/black"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:orientation="horizontal"
                            android:gravity="left">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:textSize="20sp"
                                android:fontFamily="@font/opensans_reg"
                                android:textColor="@android:color/black"
                                android:text="Pub"/>
                            <SeekBar
                                android:id="@+id/seek"
                                android:layout_width="200dp"
                                android:layout_height="match_parent"
                                android:max="200"
                                android:progress="60"
                                android:enabled="false"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:fontFamily="@font/opensans_reg"
                                android:textSize="20sp"
                                android:textColor="@android:color/black"
                                android:text="Club"/>
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:paddingStart="5dp"
                    android:paddingTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Deals:"
                    android:textSize="25sp"
                    android:fontFamily="@font/opensans_reg"
                    android:textColor="@android:color/black"
                    android:background="@drawable/underline_frame"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:background="@drawable/underline_frame"
                        android:clickable="true">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_toStartOf="@id/deal1_image"
                            android:orientation="vertical">
                            <TextView
                                android:gravity="center_vertical"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:fontFamily="@font/opensans_reg"
                                android:paddingStart="5dp"
                                android:text="@string/legends_deal1"
                                android:textColor="@android:color/black"
                                android:textSize="21sp"/>

                        </LinearLayout>

                        <ImageView
                            android:id="@+id/deal1_image"
                            android:layout_width="99dp"
                            android:layout_height="match_parent"
                            android:layout_alignParentEnd="true"
                            android:scaleType="centerCrop"
                            android:src="@drawable/mi_cocktail" />
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:background="@drawable/underline_frame"
                        android:clickable="true">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_toStartOf="@id/deal2_image"
                            android:orientation="vertical">
                            <TextView
                                android:gravity="center_vertical"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:fontFamily="@font/opensans_reg"
                                android:paddingStart="5dp"
                                android:text="@string/legends_deal2"
                                android:textColor="@android:color/black"
                                android:textSize="21sp"/>

                        </LinearLayout>

                        <ImageView
                            android:id="@+id/deal2_image"
                            android:layout_width="97dp"
                            android:layout_height="match_parent"
                            android:layout_alignParentEnd="true"
                            android:src="@drawable/mi_beer" />
                    </RelativeLayout>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>