<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Discover.DiscoverDealsFragment">

    <ScrollView
        android:id="@+id/bars_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nearby_tabs"
        android:layout_above="@id/bottom_navigation">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/legends_deal1"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/underline_frame"
                android:clickable="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toStartOf="@id/deal1_image"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingStart="5dp"
                        android:text="@string/legends_deal1"
                        android:textColor="@android:color/black"
                        android:textSize="20sp">
                    </TextView>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:paddingStart="5dp"
                            android:text="@string/legends_name"
                            android:textColor="@android:color/black"
                            android:textSize="20sp"
                            android:gravity="center_vertical"
                            android:textAllCaps="true"
                            android:textStyle="bold">
                        </TextView>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentEnd="true"
                            android:paddingEnd="5dp">
                            <ImageView
                                android:layout_width="45dp"
                                android:layout_height="match_parent"
                                android:src="@drawable/star"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="x7"
                                android:textSize="20sp"
                                android:gravity="center_vertical"/>
                        </LinearLayout>
                    </RelativeLayout>

                </LinearLayout>
                <ImageView
                    android:id="@+id/deal1_image"
                    android:layout_width="95dp"
                    android:layout_height="95dp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/mi_cocktail"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/lion_deal"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/underline_frame"
                android:clickable="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toStartOf="@id/deal3_image"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingStart="5dp"
                        android:text="@string/lion_deal"
                        android:textColor="@android:color/black"
                        android:textSize="20sp">
                    </TextView>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:paddingStart="5dp"
                            android:text="@string/lion_name"
                            android:textColor="@android:color/black"
                            android:textSize="20sp"
                            android:gravity="center_vertical"
                            android:textAllCaps="true"
                            android:textStyle="bold">
                        </TextView>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentEnd="true"
                            android:paddingEnd="5dp">
                            <ImageView
                                android:layout_width="45dp"
                                android:layout_height="match_parent"
                                android:src="@drawable/star"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="x3"
                                android:textSize="20sp"
                                android:gravity="center_vertical"/>
                        </LinearLayout>
                    </RelativeLayout>

                </LinearLayout>
                <ImageView
                    android:id="@+id/deal3_image"
                    android:layout_width="95dp"
                    android:layout_height="95dp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/bar_logo_lion"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/legends_deal2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/underline_frame"
                android:clickable="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toStartOf="@id/deal2_image"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingStart="5dp"
                        android:text="@string/legends_deal2"
                        android:textColor="@android:color/black"
                        android:textSize="20sp">
                    </TextView>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:paddingStart="5dp"
                            android:text="@string/legends_name"
                            android:textColor="@android:color/black"
                            android:textSize="20sp"
                            android:gravity="center_vertical"
                            android:textAllCaps="true"
                            android:textStyle="bold">
                        </TextView>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentEnd="true"
                            android:paddingEnd="5dp">
                            <ImageView
                                android:layout_width="45dp"
                                android:layout_height="match_parent"
                                android:src="@drawable/star"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="x1"
                                android:textSize="20sp"
                                android:gravity="center_vertical"/>
                        </LinearLayout>
                    </RelativeLayout>

                </LinearLayout>
                <ImageView
                    android:id="@+id/deal2_image"
                    android:layout_width="95dp"
                    android:layout_height="95dp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/mi_beer"/>
            </RelativeLayout>
            <!--Scroll testing
            <RelativeLayout
                android:id="@+id/lion2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/frame">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toStartOf="@id/image_lion2"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentStart="true"
                            android:text="@string/lion_name"
                            android:textAllCaps="true"
                            android:textStyle="bold"
                            android:paddingStart="5dp"
                            android:gravity="center"
                            android:textColor="@android:color/black"
                            android:textSize="20sp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentEnd="true"
                            android:text="Very Busy"
                            android:paddingEnd="5dp"
                            android:gravity="center"
                            android:textColor="@android:color/holo_red_dark"
                            android:textSize="20sp"/>
                    </RelativeLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_alignParentEnd="true"
                                android:text="0.4mi"
                                android:paddingEnd="5dp"
                                android:gravity="center"
                                android:textColor="@android:color/black"
                                android:textSize="20sp"/>
                        </RelativeLayout>
                    </LinearLayout>

                </LinearLayout>
                <ImageView
                    android:id="@+id/image_lion2"
                    android:layout_width="95dp"
                    android:layout_height="95dp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/bar_logo_lion"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/lion3"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/frame">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toStartOf="@id/image_lion3"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentStart="true"
                            android:text="@string/lion_name"
                            android:textAllCaps="true"
                            android:textStyle="bold"
                            android:paddingStart="5dp"
                            android:gravity="center"
                            android:textColor="@android:color/black"
                            android:textSize="20sp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentEnd="true"
                            android:text="Very Busy"
                            android:paddingEnd="5dp"
                            android:gravity="center"
                            android:textColor="@android:color/holo_red_dark"
                            android:textSize="20sp"/>
                    </RelativeLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_alignParentEnd="true"
                                android:text="0.4mi"
                                android:paddingEnd="5dp"
                                android:gravity="center"
                                android:textColor="@android:color/black"
                                android:textSize="20sp"/>
                        </RelativeLayout>
                    </LinearLayout>

                </LinearLayout>
                <ImageView
                    android:id="@+id/image_lion3"
                    android:layout_width="95dp"
                    android:layout_height="95dp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/bar_logo_lion"/>
            </RelativeLayout>
            -->


        </LinearLayout>
    </ScrollView>

</FrameLayout>